several styling updates to hero and description list to fix alignment issues

--- a/src/components/description-list/_description-list.scss
+++ b/src/components/description-list/_description-list.scss
@@ -41,15 +41,11 @@
     }
 
     &--inline {
-        .ons-description-list__term {
-            padding-right: 1rem;
-        }
-
         @include mq(l) {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            grid-template-rows: repeat(2, 1fr);
-            grid-auto-flow: column;
+            grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
+            grid-auto-rows: auto;
+            grid-auto-flow: row;
             gap: 0.5rem 2.5rem;
 
             .ons-description-list__value {
@@ -59,6 +55,7 @@
             .ons-description-list__item {
                 display: grid;
                 grid-template-columns: auto 1fr;
+                grid-column-gap: 1rem;
             }
         }
     }
